<resources>
    <string name="app_name">OZbargain</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="dialog_title">Loading</string>
    <string name="pref_notification_title">Notifications</string>
    <string name="pref_notification_summary">Notify me when new bargain is detected</string>
    <string name="pref_notification_title2">Turn on notification</string>
    <string name="goto_btn">Go to deal</string>
    <string name="comment_btn">Comments</string>
    <string name="description_btn">DESCRIPTION</string>
    <string name="pref_notification_title3">Notification Interval</string>
    <string name="pref_notification_summary2">How often you would like to receive the notifications.</string>
    <string name="pref_notification_interval_dialog_title">Interval</string>
    <string name="pref_notification_category_dialog_title">Category</string>
    <string name="pref_notification_interval_default">15</string>
    <string name="notification_new_deal">New deal!</string>
    <string name="pref_notification_title4">Favorite Category</string>
    <string name="pref_notification_summary3">Will receive notification only for these categories</string>
    <string name="all">All</string>

</resources>
