...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/title_container"
        android:layout_marginTop="@dimen/list_item_margin_top"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/bargain_detail_comment_container"
        android:orientation="vertical"
...
                android:text="@string/comment_btn"
                android:textStyle="bold"
                android:textColor="@drawable/bargain_btn_text"
                android:background="@drawable/bargain_btn"/>

            <Button
                android:id="@+id/bargain_detail_goto_btn"
                android:layout_alignParentRight="true"
                android:layout_width="96dp"
                android:layout_height="36dp"
                android:text="@string/goto_btn"
                android:textStyle="bold"
                android:textColor="@drawable/bargain_btn_text"
...
